# internal/api/dto/wallet.go
@@ -9,6 +9,26 @@ type CreditWalletResponse struct {
 	UserID string `json:"user_id"`
 }
 
+type GetWalletResponse struct {
+	ID       string `json:"id"`
+	UserID   string `json:"user_id"`
+	Balance  int64  `json:"balance"`
+	Currency string `json:"currency"`
+}
+
+type GetUserResponse struct {
+	ID       string  `json:"id"`
+	Name     string  `json:"name"`
+	LastName string  `json:"last_name"`
+	Phone    string  `json:"phone"`
+	WalletID *string `json:"wallet_id,omitempty"`
+}
+
+type GetAllUsersResponse struct {
+	Users []GetUserResponse `json:"users"`
+	Total int               `json:"total"`
+}
+
 type BaseResponse struct {
 	Success bool        `json:"success"`
 	Message string      `json:"message"`
